# GIMod-Manager

./: Cargo.toml  PyCompiler.bat  PyInstallerCompiler.bat
src/: collections.rs  config.json  config.rs  constants.py  gui.rs  main.py  main.rs  settings.json
src/app/: app.py  settings.json
